[metadata]
name = noaa_scrapper

version = 2020.4.0

platform = linux|linux2|darwin

description = Scrap some data from NOAA for Hadoop Definitive Guide book examples.

long_description = file: README.md

long_description_content_type = text/markdown; charset=UTF-8

license = Apache License 2.0

license-file = LICENSE

author = Max Preobrazhensky
author_email = max.preobrazhensky@gmail.com

maintainer =
    Max Preobrazhensky <max.preobrazhensky@gmail.com>

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Topic :: Database
    Intended Audience :: Developers

project_urls =
    Source Code = https://github.com/jjj4x/noaa_scrapper


[options]
python_requires = >=3.7

zip_safe = False

include_package_data = True

py_modules = noaa_scrapper

install_requires =
    requests >= 2

[options.entry_points]
console_scripts =
    noaa-scrapper = noaa_scrapper:main
